--- a/Vistas/vPrincipal.xaml
+++ b/Vistas/vPrincipal.xaml
@@ -79,7 +79,7 @@
         <Label 
                 />
         <Button x:Name="btnActualizar"
-        Text="Actualizar"
+        Text="Actualizaar"
         Clicked="btnActualizar_Clicked"/>
 
 
